--- a/website/newsletter/187/index.mdx
+++ b/website/newsletter/187/index.mdx
@@ -94,7 +94,7 @@ Other interesting things were announced at Vercel Ship. Additional resources to 
 - 📦 [Ark UI 3.0](https://ark-ui.com/react/docs/overview/changelog#300---2024-05-24)
 - 📦 [React-Query 5.39 - Supports React 19](https://github.com/TanStack/query/releases/tag/v5.39.0)
 - 📦 [Redwood 7.6 - React Compiler experimental flag](https://github.com/redwoodjs/redwood/releases/tag/v7.6.0)
-- 📦 [zsa 0.1 - Typesafe Server Actions for Next.js](http://next.js)
+- 📦 [zsa 0.1 - Typesafe Server Actions for Next.js](https://nextjs.org)
 - 📦 [React-Executor - Asynchronous task execution and state management for React](https://github.com/smikhalevski/react-executor)
 - 🎥 [UI Engineering - Portals Can Share State Between Windows](https://www.youtube.com/watch?v=jZx33FPMXzc): It's a pretty cool idea to use React portals to integrate seamlessly between windows and might also be useful for the upcoming browser Picture-in-Picture API.
 - 🎥 [Theo - I Was Wrong About React Router.](https://www.youtube.com/watch?v=m86HssTKExU)
