--- a/website/newsletter/244/index.mdx
+++ b/website/newsletter/244/index.mdx
@@ -77,7 +77,7 @@ The React Compiler is now recommended in other places of the docs as a [better a
 - 📜 [How to Use Action Routes in React Router](https://sergiodxa.com/tutorials/use-action-routes-in-react-router): Shows how to centralize actions in one place so that you can call them from multiple places without duplication.
 - 📜 [Storybook bloat? Fixed](https://storybook.js.org/blog/storybook-bloat-fixed/): Storybook v9 greatly optimized the dependency graph, reducing install time and size significantly.
 - 📜 [Introducing Zustand](https://frontendmasters.com/blog/introducing-zustand/): Explains the advantages of Zustand over a vanilla React Context.
-- 📜 [Adding .md URLs for Raw Markdown Content in](https://www.bengubler.com/posts/2025-06-14-raw-markdown-urls-nextjs) [Next.js](http://Next.js): A Little trick that could be useful to feed LLMs.
+- 📜 [Adding .md URLs for Raw Markdown Content in Next.js](https://www.bengubler.com/posts/2025-06-14-raw-markdown-urls-nextjs): A Little trick that could be useful to feed LLMs.
 - 📜 [Leaving Next.js behind](https://www.jeantinland.com/blog/leaving-nextjs-behind/): Story of migrating a personal website to a simpler and lighter stack, relying on less JavaScript.
 - 📜 [The present and the future of SPAs in React](https://www.felgus.dev/blog/future-spa)
 - 📜 [React Server Components: How We Got Here](https://www.epicreact.dev/react-server-components-how-we-got-here-zcuxn)
