--- a/website/newsletter/245/index.mdx
+++ b/website/newsletter/245/index.mdx
@@ -60,7 +60,7 @@ TanStack DB 0.1 is out in beta, 🐦 [completing the vision Tanner Linsley had f
 - 📅 [Next.js Conf \- San Francisco \- Oct 23, 2025 \- The CFP is now open](https://vercel.typeform.com/to/KYobJh3C?typeform-source=ThisWeekInReact)
 - 📜 [The Useless useCallback](https://tkdodo.eu/blog/the-useless-use-callback): Shows how easy it is to inadvertently break your `React.memo` optimizations and your `useEffect` behavior due to referential stability issues. IMO, React optimizations should be encapsulated; they shouldn't depend on how a component/hook is used to work, but it’s easier said than done.
 - 📜 [How Parcel bundles React Server Components](https://devongovett.me/blog/parcel-rsc.html): Great overview of how a bundler like Parcel works, and how it splits code and preloads it efficiently in an RSC setup depending on dynamic imports and \`use client\` directives.
-- 📜 [We’ve moved from TanStack Start to](https://llmgateway.io/changelog/nextjs-migration?v=2) [Next.js](http://Next.js): It’s a product changelog entry, but you’ll find [more interesting discussions on X](https://x.com/tannerlinsley/status/1950310182451630384).
+- 📜 [We’ve moved from TanStack Start to Next.js](https://llmgateway.io/changelog/nextjs-migration?v=2): It’s a product changelog entry, but you’ll find [more interesting discussions on X](https://x.com/tannerlinsley/status/1950310182451630384).
 - 📜 [Let's Write React Hooks From Scratch](https://playfulprogramming.com/posts/react-write-hooks-from-scratch)
 - 📜 [Component Test with Storybook and Vitest](https://storybook.js.org/blog/component-test-with-storybook-and-vitest/)
 - 💸 [Add DOCX editing to your React app with Apryse WebViewer - no office or server setup needed, just fast, native in-browser editing](https://apryse.com/blog/webviewer/how-to-embed-docx-editing-in-react-v2?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_30&utm_content=email_textlink)
