--- a/website/newsletter/246/index.mdx
+++ b/website/newsletter/246/index.mdx
@@ -62,7 +62,7 @@ The new minor version of Next.js brings exciting improvements across many areas 
 - 📜 [React Query Selectors, Supercharged](https://tkdodo.eu/blog/react-query-selectors-supercharged): Fine-grained subscriptions using `select` explained by Dominik, the maintainer of React Query.
 - 📜 [How to Handle deferred data in React Router](https://sergiodxa.com/tutorials/handle-deferred-data-in-react-router): React Router's `Await` combined with `Suspense` allows you to navigate to a component while the data is still being fetched.
 - 📜 [Building testable Telegram bots with Zustand](https://zwit.link/posts/zustand-telegram-bot/): Proves how using Zustand as the backbone of app architecture allows you to create scalable, easy-to-test code. Full source code available at the end of the article.
-- 📜 [How I built a full-stack React framework 4x faster than](https://ryanskinner.com/posts/how-i-built-a-full-stack-react-framework-4x-faster-than-nextjs-with-4x-more-throughput) [Next.js](http://Next.js): Rari is a React framework that replaces Node.js with direct access to the V8 runtime via Rust. It offers great performance for rendering, builds, and concurrent requests without sacrificing the developer experience.
+- 📜 [How I built a full-stack React framework 4x faster than Next.js](https://ryanskinner.com/posts/how-i-built-a-full-stack-react-framework-4x-faster-than-nextjs-with-4x-more-throughput): Rari is a React framework that replaces Node.js with direct access to the V8 runtime via Rust. It offers great performance for rendering, builds, and concurrent requests without sacrificing the developer experience.
 - 📘 [React is Awful - A fun way to learn a bad thing](https://github.com/cloudstreet-dev/React-is-Awful) Surprisingly accurate (and funny\!) AI generated book about React. I feel insulted and impressed at the same time. The tone of voice in the book is a bit salty so take it with a pinch of salt.
 - 💸 [React Certification - Take a supervised exam created by React expert Aurora Scharff, obtain your certificate to unlock career opportunities](https://certificates.dev/react?friend=TWIR)
 - 📦 [React Router 7.8 \- New `loaderData` fields, stability improvements to `unstable_middleware`](https://reactrouter.com/changelog#v780)
