--- a/website/newsletter/252/index.mdx
+++ b/website/newsletter/252/index.mdx
@@ -84,7 +84,7 @@ Just in time before React Conf, React 19.2 is out with several new features and 
 - 📦 [React Window 2.2 \- Dynamic row height](https://github.com/bvaughn/react-window/releases/tag/2.2.0)
 - 🎥 [Alem Tuzlak \- React Router just made RSC trivial to use\!](https://www.youtube.com/watch?v=o7t6HNnQE_k)
 - 🎥 [Backpine Labs \- TanStack Start is now my Go-To Framework](http://youtube.com/watch?v=TWWS_lo4kOA)
-- 🎥 [Ankita Kulkarni \- Dan Abramov Interview \- React Server Components, Leaving X and Future of](https://www.youtube.com/watch?v=ml2UiJ69gg8) [Next.js](http://Next.js)
+- 🎥 [Ankita Kulkarni \- Dan Abramov Interview \- React Server Components, Leaving X and Future of Next.js](https://www.youtube.com/watch?v=ml2UiJ69gg8)
 - 🎥 [Ryan Carniato \- Innovating React \- Stream with Ricky Hanlon](https://www.youtube.com/live/3vw6EAmruEU)
 - 🎙️ [This Month in React 2025-09 \- React 19.2 on the horizon; npm is still getting compromised](https://share.transistor.fm/s/5e21ada9)
 
