--- a/website/newsletter/256/index.mdx
+++ b/website/newsletter/256/index.mdx
@@ -67,7 +67,7 @@ This event also led to various discussions in the community, following the intro
 - 💸 [5 React Grid Examples to Transform Your Next Project](https://www.infragistics.com/blogs/react-grid-examples/?utm_source=this-week-in-react&utm_medium=referral&utm_campaign=ignite-ui-react&utm_term=newsletter-sponsorship&utm_content=5-react-grid-examples)
 - 📜 [Introducing TanStack Start Middleware](https://frontendmasters.com/blog/introducing-tanstack-start-middleware/) \- A gentle introduction to Middleware, that teaches how to leverage a possibility of executing code in conjunction with your server-side operations.
 - 📜 [Why developers are leaving Next.js for TanStack Start, and loving it](https://appwrite.io/blog/post/why-developers-leaving-nextjs-tanstack-start) \- An opinionated peace on the state of Next.js, it’s growing complexity and competition.
-- 📜 [The Rari SSR Breakthrough: 12x Faster, 10x Higher Throughput Than](https://ryanskinner.com/posts/the-rari-ssr-breakthrough-12x-faster-10x-higher-throughput-than-nextjs) [Next.js](http://Next.js) \- Tanstack Start is apparently not the only competition Next.js should worry about, [Rari](https://github.com/rari-build/rari) has released some impressive benchmarks this week.
+- 📜 [The Rari SSR Breakthrough: 12x Faster, 10x Higher Throughput Than Next.js](https://ryanskinner.com/posts/the-rari-ssr-breakthrough-12x-faster-10x-higher-throughput-than-nextjs) \- Tanstack Start is apparently not the only competition Next.js should worry about, [Rari](https://github.com/rari-build/rari) has released some impressive benchmarks this week.
 - 📜 [I Built the Same App 10 Times: Evaluating Frameworks for Mobile Performance](https://www.lorenstew.art/blog/10-kanban-boards) \- A deep-dive focusing on benchmarking bundle size and FCP performance of different frameworks. As it turns out the packages of react based solutions might be much larger than those of the competition.
 - 📜 [React and Remix Choose Different Futures](https://laconicwit.com/react-and-remix-choose-different-futures/): Interesting reflections on the potential future of both frameworks. The author suggests that React is following a path of stability, even if it means sacrificing complexity, while Remix is choosing simplicity as their primary goal.
 - 💸 [STRICH - Add lightning-fast barcode & QR scanning to your web app with a lean JS lib. Simple, predictable pricing, free trial and demo!](https://strich.io/?ref=twir)
