--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
@@ -94,7 +94,7 @@ D'autres choses intéressantes ont été annoncées au Vercel Ship. Ressources s
 - 📦 [Ark UI 3.0](https://ark-ui.com/react/docs/overview/changelog#300---2024-05-24)
 - 📦 [React-Query 5.39 - Supports React 19](https://github.com/TanStack/query/releases/tag/v5.39.0)
 - 📦 [Redwood 7.6 - React Compiler experimental flag](https://github.com/redwoodjs/redwood/releases/tag/v7.6.0)
-- 📦 [zsa 0.1 - Typesafe Server Actions for Next.js](http://next.js)
+- 📦 [zsa 0.1 - Typesafe Server Actions for Next.js](https://nextjs.org)
 - 📦 [React-Executor - Asynchronous task execution and state management for React](https://github.com/smikhalevski/react-executor)
 - 🎥 [UI Engineering - Portals Can Share State Between Windows](https://www.youtube.com/watch?v=jZx33FPMXzc) : L'idée d'utiliser des portals React pour s'intégrer de manière transparente entre les fenêtres est plutôt cool et pourrait également être utile pour la future API Picture-in-Picture du navigateur.
 - 🎥 [Theo - I Was Wrong About React Router.](https://www.youtube.com/watch?v=m86HssTKExU)
