--- a/website/newsletter/238/index.mdx
+++ b/website/newsletter/238/index.mdx
@@ -56,7 +56,7 @@ To address this injustice, [PostHog](https://go.posthog.com/twir-jun11-ph) share
 - 📦 [React Aria \- June 5 release \- Drag and drop support in React Aria Tree](https://react-spectrum.adobe.com/releases/2025-06-05.html)
 - 📦 [Puck 0.19 \- Visual editor for React \- Slots API & performance gains](https://puckeditor.com/blog/puck-019)
 - 📦 [Astro 5.9 \- Experimental CSP support, render Markdown in content loaders](https://astro.build/blog/astro-590/)
-- 📦 [React Cosmos 7.0 \- Develop UI components in isolation \- Support React 19,](https://github.com/react-cosmos/react-cosmos/releases/tag/v7.0.0) [Next.js](http://Next.js) [15](https://github.com/react-cosmos/react-cosmos/releases/tag/v7.0.0)
+- 📦 [React Cosmos 7.0 \- Develop UI components in isolation \- Support React 19, Next.js 15](https://github.com/react-cosmos/react-cosmos/releases/tag/v7.0.0)
 - 🎥 [Youssef \- The Most Common React Query Mistake](https://www.youtube.com/watch?v=JVcZLEFaC2M)
 - 🎥 [Jack Herrington \- Remix V3's Fatal Flaw](https://www.youtube.com/watch?v=5SPqO6NR_Bg)
 - 🎥 [Theo \- Why Tech Companies Are Moving Off React](https://www.youtube.com/watch?v=HBpOzj-iBUg)
