--- a/website/newsletter/260/index.mdx
+++ b/website/newsletter/260/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /260
-title: "This Week In React #260: TanStack, HTML streaming, React 19 Actions, Redux Toolkit, Rescript 12, Streamdown, XState Store | Vercel v0, Worklets, Skia, Tailwind, Native Stack, Gifted Chat, Enriched | TC39, Playwright, Bun, Astro, Better Auth"
+title: "This Week In React #260: TanStack, Actions, Immer, RTK, Streamdown, XState Store, ReScript, HTML streaming | Vercel v0, Worklets, Skia, Tailwind, Native Stack, Gifted Chat, Enriched | TC39, Playwright, Bun, Astro, Better Auth"
 authors: [tboba, kacperkapusciak]
 date: 11-26-2025
-unlisted: true
 ---
 
 Hi everyone! **Kacper and Tymek from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here! 👋
@@ -50,6 +49,8 @@ It provides a dedicated React adapter (`@tanstack/react-pacer`), which gives you
 It also gives you the ability to debug the code via [TanStack Devtools](https://tanstack.com/pacer/latest/docs/devtools).
 
 You can read more about the TanStack Pacer's adapter for React [here](https://tanstack.com/pacer/latest/docs/framework/react/adapter).
+
+---
 
 - 💸 [[BLACK_FRIDAY for 50%] The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_3.4)
 - 🐦 [Out-of-order HTML streaming proposal](https://x.com/mozhacks/status/1991176754476572999): Lets HTML be presented non-linearly, and a single file can update multiple parts of the page. Particularly useful for streaming in React while leveraging Suspense.
@@ -99,9 +100,11 @@ Frustrated with janky data grids that break down at scale, dictate your architec
 
 [![Vercel - How we built the v0 iOS app](/emails/issues/260/v0.png)](https://vercel.com/blog/how-we-built-the-v0-ios-app)
 
-[Vercel \- How we built the v0 iOS app](https://vercel.com/blog/how-we-built-the-v0-ios-app)
+**[Vercel \- How we built the v0 iOS app](https://vercel.com/blog/how-we-built-the-v0-ios-app)**
 
 A detailed technical breakdown of the challenges they had to overcome to create a high-quality React Native app. The article is packed with visual explanations and code snippets of common RN headaches related to keyboard handling, lists, text input, and animations.
+
+---
 
 - 💸 [Shipping to the Meta Horizon Store with React Native? See Callstack's release guide, then jump into Meta’s dev competition](https://www.callstack.com/blog/how-to-release-a-react-native-app-on-the-meta-horizon-store?utm_campaign=meta&utm_source=TWIR&utm_medium=email&utm_content=how-to-release-a-react-native-app-on-the-meta-horizon-store)
 - 👀 [Worklets PR \- custom serialization support](https://github.com/software-mansion/react-native-reanimated/pull/8600): A PR that adds a feature to register Custom Serializables just landed on main. It lets you transfer objects between runtimes that can't be trivially serialized or deserialized \- like primitives, or objects without circular references, containing only primitives.
@@ -140,7 +143,8 @@ A detailed technical breakdown of the challenges they had to overcome to create 
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/260/meme1.png)](https://x.com/wesbos/status/1990806466203169103)
-[![alt](/emails/issues/260/meme2.png)](https://x.com/wesbos/status/1990806466203169103)
+[![alt](/emails/issues/260/meme1.jpg)](https://x.com/wesbos/status/1990806466203169103)
+
+[![alt](/emails/issues/260/meme2.jpg)](https://x.com/sebastienlorber/status/1993333678748189106)
 
 See ya! 👋
