--- a/website/newsletter/261/index.mdx
+++ b/website/newsletter/261/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /261
-title: "This Week In React #261: RSC vulnerability, Activity, React Router, Sonner, Cedar, Storybook, Conform | RNRepo, Nitro Modules, Keyboard Controller, SET, Sheets, deep links | tsgo, Bun, WebGPU, Vite, oxfmt, Valibot"
+title: "This Week In React #261: RSC vulnerability, Activity, ViewTransition, React Router, Sonner, Cedar, Storybook, Conform | RNRepo, Nitro Modules, Keyboard Controller, SET, Sheets, deep links | tsgo, Bun, WebGPU, Vite, oxfmt, Valibot"
 authors: [slorber]
 date: 12-03-2025
 ---
